# spiderweb

./: README.md  spiderweb.cabal  stack.yaml
app/: Main.hs
src/: SpiderWeb.hs
test/: SpiderWebSpec.hs
