name:                spiderweb
version:             0.1.0.0
synopsis:            Link check, capture, and serve sites statically
description:         Please see README.md
homepage:            https://github.com/fpco/spiderweb#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
copyright:           2016 FP Complete
category:            Web
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SpiderWeb
  build-depends:       base >= 4.7 && < 5
                     , conduit-extra
                     , classy-prelude-conduit
                     , http-client
                     , http-conduit
                     , network-uri
                     , tagstream-conduit
                     , temporary
                     , word8
  default-language:    Haskell2010

executable spiderweb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spiderweb
                     , optparse-simple
  default-language:    Haskell2010

test-suite spiderweb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SpiderWebSpec
  build-depends:       base
                     , bytestring
                     , hspec
                     , spiderweb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/spiderweb
